Minor refactor to use JDK16+ syntax